@startuml Class_Part2_Order
title Class Diagram — Bagian 2: Manajemen Order & Desain
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #DCFCE7
  BorderColor #15803D
  ArrowColor #14532D
}

class User {
  +id: String
  +name: String
  +role: String
}

class Customer {
  +id: String
  +nama: String
  +nomorHp: String
}

class Product {
  +id: String
  +sku: String
  +nama: String
  +hargaJual: Decimal
}

class Order {
  +id: String
  +nomorOrder: String
  +channel: OrderChannel
  +statusProduksi: StatusProduksi
  +statusPembayaran: StatusPembayaran
  +metodePembayaran: MetodePembayaran
  +subtotal: Decimal
  +diskon: Decimal
  +ongkir: Decimal
  +grandTotal: Decimal
  +deadline: DateTime
  +catatan: String
  +deletedAt: DateTime
  --
  +updateStatus(): void
  +calculateTotal(): Decimal
}

class OrderItem {
  +id: String
  +nama: String
  +harga: Decimal
  +qty: Decimal
  +subtotal: Decimal
  +catatan: String
  --
  +calculateSubtotal(): Decimal
}

class DesignFile {
  +id: String
  +nama: String
  +filePath: String
  +createdAt: DateTime
}

Customer "1"    -->  "0..*" Order      : melakukan
User    "1"     -->  "0..*" Order      : membuat
Order   "1"     *--  "1..*" OrderItem  : berisi
OrderItem "0.*" -->  "1"   Product    : mengacu ke
Order   "1"     -->  "0..*" DesignFile : memiliki
User    "1"     -->  "0..*" DesignFile : mengupload

@enduml
